-Bild wird nicht angezeigt -bessere Lösung für xaml finden statt xaml.cs -Anbindung zur Datenbank fehlt

--- a/MyApplication1/MyApplication1/MyApplication1/Views/CreatePage.xaml
+++ b/MyApplication1/MyApplication1/MyApplication1/Views/CreatePage.xaml
@@ -21,7 +21,7 @@
     <Button Text="Weiter"
             HorizontalOptions="Center"
             VerticalOptions="CenterAndExpand"
-            Clicked="OnContinueClicked" />
+            Clicked="OnButtonClickedContinue" />
     <!--Button wird nicht angezeigt-->
     
   </StackLayout>
