--- a/MyApplication1/MyApplication1/MyApplication1/Views/CreatePageTwo.xaml
+++ b/MyApplication1/MyApplication1/MyApplication1/Views/CreatePageTwo.xaml
@@ -1,6 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyApplication1.Views.CreatePageTwo">
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+             x:Class="MyApplication1.Views.CreatePageTwo"
+             Title="Anzeige erstellen">
+  <ContentPage.Padding>
+    <OnPlatform x:TypeArguments="Thickness">
+      <OnPlatform.iOS>0, 20, 0, 0</OnPlatform.iOS>
+    </OnPlatform>
+  </ContentPage.Padding>
+  <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+
+    <!-- setting the source directly -->
+    <Image Source="holzbretter.gif" />
+
+    <!-- choosing a different image for each platform
+    <Image IsVisible="false">
+      <Image.Source>
+        <OnPlatform x:TypeArguments="ImageSource">
+          <OnPlatform.iOS>
+            <FileImageSource File="Icon.png"/>
+          </OnPlatform.iOS>
+          <OnPlatform.Android>
+            <FileImageSource File="Icon.png"/>
+          </OnPlatform.Android>
+          <OnPlatform.WinPhone>
+            <FileImageSource File="Icon.png"/>
+          </OnPlatform.WinPhone>
+        </OnPlatform>
+      </Image.Source>
+    </Image> -->
+
+  </StackLayout>
 </ContentPage>
