paar neue views paar neue extras KANN IMMERNOCH KEINE OBJEKTE ANZEIGEN LASSEN

--- a/MyApplication1/MyApplication1/MyApplication1/Views/CreatePage.xaml
+++ b/MyApplication1/MyApplication1/MyApplication1/Views/CreatePage.xaml
@@ -15,14 +15,13 @@
            HorizontalOptions="Center"/>
     
     <ListView x:Name="category"
-              ItemTapped="OnCategoryTapped"
+              ItemSelected="OnSelection"
               ItemsSource="{Binding .}" />
     
     <Button Text="Weiter"
             HorizontalOptions="Center"
             VerticalOptions="CenterAndExpand"
             Clicked="OnButtonClickedContinue" />
-    <!--Button wird nicht angezeigt-->
     
   </StackLayout>
   
