--- a/MyApplication1/MyApplication1/MyApplication1/Views/CreatePageTwo.xaml
+++ b/MyApplication1/MyApplication1/MyApplication1/Views/CreatePageTwo.xaml
@@ -3,32 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyApplication1.Views.CreatePageTwo"
              Title="Anzeige erstellen">
-  <ContentPage.Padding>
-    <OnPlatform x:TypeArguments="Thickness">
-      <OnPlatform.iOS>0, 20, 0, 0</OnPlatform.iOS>
-    </OnPlatform>
-  </ContentPage.Padding>
-  <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
-
-    <!-- setting the source directly -->
-    <Image Source="holzbretter.gif" />
-
-    <!-- choosing a different image for each platform
-    <Image IsVisible="false">
-      <Image.Source>
-        <OnPlatform x:TypeArguments="ImageSource">
-          <OnPlatform.iOS>
-            <FileImageSource File="Icon.png"/>
-          </OnPlatform.iOS>
-          <OnPlatform.Android>
-            <FileImageSource File="Icon.png"/>
-          </OnPlatform.Android>
-          <OnPlatform.WinPhone>
-            <FileImageSource File="Icon.png"/>
-          </OnPlatform.WinPhone>
-        </OnPlatform>
-      </Image.Source>
-    </Image> -->
-
-  </StackLayout>
+  <ContentPage.Content>
+    <StackLayout>
+      <Button Text="Bild aufnehmen" Command="{Binding TakePictureCommand}" />
+      <Button Text="Bild hochladen" Command="{Binding SelectPictureCommand}" />
+      <Button Text="Video hochladen" Command="{Binding SelectVideoCommand}" />
+      <Image Source="{Binding ImageSource}" VerticalOptions="CenterAndExpand" />
+      <Entry Text="{Binding VideoInfo}" VerticalOptions="CenterAndExpand" />
+      <Button Text="Weiter"
+        HorizontalOptions="Center"
+        VerticalOptions="CenterAndExpand"
+        Clicked="OnButtonClickedContinue" />
+    </StackLayout>
+  </ContentPage.Content>
 </ContentPage>
