--- a/MyApplication1/MyApplication1/MyApplication1/Views/HelloXamlPage.xaml
+++ b/MyApplication1/MyApplication1/MyApplication1/Views/HelloXamlPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyApplication1.HelloXamlPage"
-             Title="Hello XAML Page"
+             Title="SFB"
              Padding="10, 40, 10, 10">
   
 
@@ -21,20 +21,22 @@
            VerticalOptions="Center"
            HorizontalOptions="Center"
            IsVisible="true"
-           FontSize="18"
+           FontSize="20"
            FontAttributes="Bold"
            TextColor="Green" />
     
-    <Entry Placeholder="Benutzername"
+    <Entry x:Name="name"
+           Placeholder="Benutzername"
            TextColor="Green"/>
     <Entry IsPassword="true"
            Placeholder="Passwort"
            TextColor="Green"/>
     
     <Label Text="Bitte registrieren Sie sich, wenn Sie neu sind!"
-           FontSize="14"
+           FontSize="16"
            HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+           VerticalOptions="CenterAndExpand"
+           TextColor="Green"/>
     
     <Button Text="Login"
             HorizontalOptions="Center"
