--- a/MyApplication1/MyApplication1/MyApplication1/Views/LogPage.xaml
+++ b/MyApplication1/MyApplication1/MyApplication1/Views/LogPage.xaml
@@ -14,7 +14,7 @@
            VerticalOptions="CenterAndExpand" />
 
     <ListView x:Name="Angebote"
-              ItemsSource="{Binding .}" />    
+              ItemsSource="{Binding }" />    
 
     <Button Text="Angebot erstellen"
             HorizontalOptions="Center"
