article view erstellt

--- a/MyApplication1/MyApplication1/MyApplication1/Views/ArticlePage.xaml
+++ b/MyApplication1/MyApplication1/MyApplication1/Views/ArticlePage.xaml
@@ -1,10 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyApplication1.Views.ArticlePage"
-             Title="Artikelübersicht">
-  <Label Text="Artikelsuche" 
-         VerticalOptions="Center" 
-         HorizontalOptions="Center" />
-  <Entry Placeholder="Suchbegriff"/>
-</ContentPage>
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
+            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+            x:Class="MyApplication1.Views.ArticlePage"
+            Title="Artikelübersicht">
+
+  <TabbedPage.ItemTemplate>
+    <DataTemplate>
+      <ContentPage Title="{Binding Name}">
+        <StackLayout Padding="5, 25">
+
+          <!-- Name -->
+          <Label Text="{Binding Name}"
+                 Font="Bold,Large"
+                 HorizontalOptions="Center" />
+
+          <!-- Picture -->
+          <Image Source="{Binding PhotoUrl}"
+                 WidthRequest="260"
+                 HeightRequest="260" />
+
+          <StackLayout Padding="40, 120">
+
+            <!-- Type -->
+            <StackLayout Orientation="Horizontal">
+              <Label Text="Material: " 
+                     Font="Bold,Medium"/>
+              <Label Text="{Binding Type}" />
+            </StackLayout>
+
+            <!-- Info -->
+            <StackLayout>
+              <Label Text="Beschreibung: "
+                     Font="Bold,Medium"/>
+              <Label Text="{Binding Info}" />
+            </StackLayout>
+          </StackLayout>
+        </StackLayout>
+      </ContentPage>
+    </DataTemplate>
+  </TabbedPage.ItemTemplate>
+</TabbedPage>
