commit vom laptop

--- a/MyApplication1/MyApplication1/MyApplication1/Views/LogPage.xaml
+++ b/MyApplication1/MyApplication1/MyApplication1/Views/LogPage.xaml
@@ -13,8 +13,8 @@
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
 
-    <ListView x:Name="Angebote"
-              ItemsSource="{Binding }" />    
+    <ListView x:Name="offers"
+              ItemsSource="{Binding .}" />    
 
     <Button Text="Angebot erstellen"
             HorizontalOptions="Center"
